--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!--字体图标cdd-->
         <link href="css/font.css" rel="stylesheet" type="text/css">
 
-        <title>Reynald Jo Armonia</title>
+        <title>Christian Emmanuel Boyboy</title>
     </head>
     <body>
 
@@ -41,12 +41,12 @@
                 <div class="header clearfix">
                     <div class="avatar">
                         <a href="javascript:;" class="avatar_pic circle"><em class="circle doing">Awesome!</em></a>
-												<b class="doing r5">RJ</b>
+												<b class="doing r5">Boyax</b>
                     </div>
                     <div class="base">
                         <p class="desc">Hello I'm</p>
-                        <h2>Reynald Jo Armonia</h2>
-                        <p>SOFTWARE ENGINEER/LANEX CORPORATION</p>
+                        <h2>Christian Emmanuel Boyboy</h2>
+                        <p>SOFTWARE ENGINEER/Sprobe Inc.</p>
                         <span>
                             <p><i aria-hidden="true" data-icon="&#xe01d;"></i>Cebu, Philippines 6000</p>
                         </span>
@@ -60,10 +60,10 @@
                     <div class="info_area info_left info_content">
 
                         <h5>My Story</h5>
-<p class="desc"><em class="count"></em><b>Passionate programmer who likes to build things and explore.</b></p>
+                        <p class="desc"><em class="count"></em><b>Passionate programmer who likes to build things and explore.</b></p>
                         <p class="desc">
-<em class="count"></em>Graduated from University of San Carlos with a Bachelor's degree in Computer Engineering
-</p>
+                            <em class="count"></em>Graduated from University of San Carlos with a Bachelor's degree in Computer Engineering
+                        </p>
                         <!-- s1~s5 为对应右侧 时间点 -->
                         <p class="desc s1"><em class="count"></em>Developed and completed Cloud-based Traffic Advisory for Cebu City using Node.js, Socket.io and Google maps</p>
 												<p class="desc s2"><em class="count"></em>Developed Edivate( the new PD360 ) using Backbone.js. Later we integrate it Angular.js
@@ -111,24 +111,14 @@
                     <div class="info_area info_right info_timeline">
                         <h5><i aria-hidden="true" data-icon="&#x7d;"></i>Timeline</h5>
                         <ul>
-                            <li class="clearfix" id="s3">
-                                <!--list样式-->
-                                <div class="dot"><b></b></div>
-                                <!--内容-->
-                                <div class="con">
-                                    <h3>Lanex Corporation</h3>
-                                    <p>Software Engineer</p>
-                                    <p class="desc">2016.12 - Present</p>
-                                </div>
-                            </li>
                             <li class="clearfix" id="s2">
                                 <!--list样式-->
                                 <div class="dot"><b></b></div>
                                 <!--内容-->
                                 <div class="con">
-                                    <h3>Global Zeal INC.</h3>
+                                    <h3>Sprobe INC.</h3>
                                     <p>Software Engineer</p>
-                                    <p class="desc">2014.4 - 2016.10</p>
+                                    <p class="desc">2014.4 - Present</p>
                                 </div>
                             </li>
                             <li class="clearfix bottom" id="s1">
